@@ -1342,6 +1342,20 @@
         </schema>
 
         <schema>
+            <key>/schemas/apps/compiz/plugins/move/screen0/options/initiate_keyboard</key>
+            <applyto>/apps/compiz/plugins/move/screen0/options/initiate_keyboard</applyto>
+            <owner>compiz</owner>
+            <type>string</type>
+            <default>&lt;Alt&gt;F7</default>
+            <locale name="C">
+                <short>Initiate Keyboard Window Move</short>
+                <long>
+                    Start moving window using keyboard
+                </long>
+            </locale>
+        </schema>
+
+        <schema>
             <key>/schemas/apps/compiz/plugins/move/screen0/options/opacity</key>
             <applyto>/apps/compiz/plugins/move/screen0/options/opacity</applyto>
             <owner>compiz</owner>
@@ -1438,7 +1452,21 @@
             <locale name="C">
                 <short>Initiate Window Resize</short>
                 <long>
-                    Start moving window
+                    Start resizing window
+                </long>
+            </locale>
+        </schema>
+
+        <schema>
+            <key>/schemas/apps/compiz/plugins/resize/screen0/options/initiate_keyboard</key>
+            <applyto>/apps/compiz/plugins/resize/screen0/options/initiate_keyboard</applyto>
+            <owner>compiz</owner>
+            <type>string</type>
+            <default>&lt;Alt&gt;F8</default>
+            <locale name="C">
+                <short>Initiate Keyboard Window Resize</short>
+                <long>
+                    Start resizing window using keyboard
                 </long>
             </locale>
         </schema>
